# submarine

./: .gitignore  AGENTS.md  INSTALL.md  LICENSE  README.md  pyproject.toml
examples/: basic.py  interactive_supervisor.py  local_llm_orchestration.py  openai_orchestration.py  subprocess_agents.py
submarine/: __init__.py  serve_stdio.py
submarine/agents/: __init__.py  backend_agent.py  base.py  llm.py  mock.py  openai.py  subprocess.py
submarine/agents/backends/: __init__.py  base.py  custom.py  factory.py  opencode.py  pi.py
submarine/core/: types.py
submarine/events/: bus.py  types.py
submarine/orchestrator/: __init__.py  core.py  interactive.py  patterns.py
tests/: test_backends.py  test_basic.py  test_interactive.py
tests/fixtures/: custom_backend_fixture.py
